--- a/CSS TUTORIAL/css(18)/index.html
+++ b/CSS TUTORIAL/css(18)/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    hello
     <div id="box1">
+        box1
         <div id="box2">box2</div>
     </div>
 </body>
